fix(cdk:scroll): simulated scrollbar blinks after data change (#1943)

--- a/packages/cdk/scroll/style/index.less
+++ b/packages/cdk/scroll/style/index.less
@@ -65,7 +65,7 @@
         top: 0;
         right: 0;
       }
-      .cdk-scrollbar-horizontal {
+      &.cdk-scrollbar-horizontal {
         bottom: 0;
         left: 0;
       }
